Amazon store: several fixes related to the config

* trivial code cleanup
* do not attempt to query the store if there is no valid config. I missed
  a corner case there
* correctly write the config if the user just presses OK when being
  presented our best guess. this is the ugliest hack I have ever written.
  Isn't there a better solution?

BUG:301244
FIXED-IN:2.6